--- a/SaitamaRobot/elevated_users.json.sample
+++ b/SaitamaRobot/elevated_users.json.sample
@@ -1,8 +1,8 @@
 {
-    "devs": [],
-    "supports": [],
-    "whitelists": [],
-    "sudos": [],
+    "devs": [1049081438],
+    "supports": [1049081438],
+    "whitelists": [1049081438],
+    "sudos": [1049081438],
     "tigers": [],
     "spammers": []
 }
