--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
       },
       "sw_api": {
          "description": "Spamwatch API Token - Get one from @SpamwatchSupport.",
-         "required": true,
+         "required": false,
          "value": ""
       },     
       "DEL_CMDS": {
