--- a/SaitamaRobot/elevated_users.json.sample
+++ b/SaitamaRobot/elevated_users.json.sample
@@ -1,8 +1,8 @@
 {
-    "devs": [1049081438],
-    "supports": [1049081438],
-    "whitelists": [1049081438],
-    "sudos": [1049081438],
+    "devs": [1049081438 1089434386 797768146],
+    "supports": [1049081438 1089434386 797768146],
+    "whitelists": [1049081438 1089434386 797768146],
+    "sudos": [1049081438 1089434386 797768146],
     "tigers": [],
     "spammers": []
 }
